# caged-trainer

./: .gitignore  README.md  README_IT.md  main.py  pyproject.toml
.github/workflows/: build-macos-app.yml  build-universal.yml
assets/: Info.plist  icon.icns  installer.iss
src/: __main__.py  chord.py  chords.py  custom_types.py  enums.py  exceptions.py  extract_chord.py  gui.py  main.py  modes.py
src_old/: chord.py  chord_list.py  enums.py  modes.py
tests/: test_modes.py
