[project]
name = "caged-trainer"
version = "0.1.0"
description = "Chord generator and evaluator for CAGED system"
readme = "README.md"
authors = [
    { name = "Francesco Marchisotti", email = "francesco.marchisotti@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = []
